tests/parser/good/adt_type.hel
// @name adt_type
// @phase parser
// @expect success

type Shape =
    | Circle { radius: f64 }
    | Rectangle { width: f64, height: f64 }
    ;
