tests/parser/bad/adt_missing_brace.hel
// @name adt_missing_brace
// @phase parser
// @expect error

type T = | C { x: i32 ;
